# sst-pim

./: .gitignore  CMakeLists.txt  README.md
scripts/: rev-print.sh  sst-major-version.sh  uninstall.sh
sstcomp/: CMakeLists.txt
sstcomp/AppGen/: CMakeLists.txt  Makefile.save  app.cc  app.h  appLink.h  appTest.cc  appTest.h  appTransactor.cc  appTransactor.h  mirandaCPU_kg.cc  mirandaCPU_kg.h  mirandaEvent_kg.h  mirandaGenerator_kg.h  mirandaMemMgr_kg.h  singlestream_kg.cc  singlestream_kg.h
sstcomp/PIMBackend/: CMakeLists.txt  Makefile.save  PIMBackend.cc  PIMBackend.h  PIMDecoder.cc  PIMDecoder.h  PIMMemController.cc  PIMMemController.h  memoryControllerKG.cc  memoryControllerKG.h  pim.cc  pim.h  tclpim.cc  tclpim.h  tclpim_functions.cc  tclpim_functions.h  userpim_functions.cc  userpim_functions.h
sstcomp/PIMBackend/memHierarchy/: cacheListener.h  memEvent.h  memEventBase.h  memEventCustom.h  memLink.h  memNIC.h  util.h
sstcomp/include/: kgdbg.h  pimdef.h
test/: CMakeLists.txt
test/configs/: 1node.py  HBM2e_8Gb_x128_UP.ini
test/pim/: .gitignore  CMakeLists.txt  Makefile  onetest.sh  pim-simple.py  run.bash
test/pim/mkinc/: appx.mk  rev.mk
test/pim/rev-test-src/: appTest.cpp  appTest2.cpp  checkdram.cc  checksram.cc  noPIM.cpp  nopim.cc  pim.lds  revpim.h  userfunc.cc  userfunc.cpp  userfunc5.cpp  userfunc6.cpp  userfunc7.cpp  userfunc7.h  userfunc8.cpp  userfunc8.h
